fix horizontal scroll

--- a/src/app/homepage/components/properties/properties.component.css
+++ b/src/app/homepage/components/properties/properties.component.css
@@ -1,5 +1,5 @@
 .grid{
-  height: 140vh;
+  height: 160vh;
 }
 
 .incentive{
